--- a/style.scss
+++ b/style.scss
@@ -73,6 +73,65 @@ p {
     color: #222;
 }
 
+#js-to-bottom {
+    position: fixed;
+    bottom: 30px;
+    left: 30%;
+    width: 40px;
+    height: 40px;
+    // transform: translateX(-20px);
+    transform-origin: 100% 0;
+    border-radius: 50%;
+    // border: 2px solid #888;
+    // background-color:red;
+    &::after {
+        content: "";
+        position: absolute;
+        top: 50%;
+        left: 50%;
+        transform: translate(-50%, -50%);
+        width: 2px;
+        height: 20px;
+        background: #888;
+    }
+    &:before {
+        content: "";
+        position: absolute;
+        // top: 15px;
+        top: 18px;
+        left: 50%;
+        border: solid #888;
+        border-width: 0 2px 2px 0;
+        padding: 5px;
+        transform: rotate(45deg) translateX(-50%);
+        transform-origin: 0;
+    }
+}
+
+.btn-wrapper {
+    display: flex;
+    justify-content: center;
+    padding: 20px 0;
+}
+
+.btn {
+    display: inline-flex;
+    justify-content: center;
+    align-items: center;
+    min-height: 30px;
+    max-width: 160px;
+    width: 100%;
+    border: 2px solid #888;
+    color: #888;
+    border-radius: 13px;
+    margin: 0 5px;
+    &:hover {
+        border-color: #222222;
+        color: #222222;
+        transition: all .2s ease;
+    }
+}
+
 .wrapper {
     display: flex;
     width: 100%;
@@ -90,6 +149,7 @@ p {
     flex-direction: column;
     align-items: center;
     max-height: 100%;
+    position: relative;
     &-img {
         width: 100%;
         max-height: 300px;
@@ -124,7 +184,7 @@ p {
 
 .content {
     width: 70%;
-    padding: 50px 30px;
+    padding: 30px 30px 50px;
     background-color: #fff;
     max-height: 100%;
 
@@ -134,7 +194,7 @@ p {
 
     &-list {
         a {
-            display: block;
+            display: inline-block;
         }
     }
 
