--- a/style.scss
+++ b/style.scss
@@ -14,8 +14,8 @@
 	}
 }
 * {
-    box-sizing: border-box;
-    font-family: "Roboto", sans-serif;
+	box-sizing: border-box;
+	font-family: "Roboto", sans-serif;
 }
 
 body {
@@ -66,10 +66,10 @@ p {
 }
 
 h1 {
-    font-size: 30px;
-    @include tablet {
-        font-size: 28px;
-    }
+	font-size: 30px;
+	@include tablet {
+		font-size: 28px;
+	}
 }
 
 h2 {
@@ -107,7 +107,8 @@ h6 {
 		font-size: 16;
 	}
 }
-p, li {
+p,
+li {
 	font-size: 16px;
 	line-height: 1.44;
 	color: #222;
@@ -117,7 +118,7 @@ p, li {
 }
 
 .wi100 {
-    width: 100%;;
+	width: 100%;
 }
 
 #js-to-bottom {
@@ -128,17 +129,17 @@ p, li {
 	height: 40px;
 	transform-origin: 100% 0;
 	border-radius: 50%;
-    @include mobile {
-        left: 50%;
-        transform: translateX(-50%);
-    }
+	@include mobile {
+		left: 50%;
+		transform: translateX(-50%);
+	}
 	&::after {
 		content: "";
 		position: absolute;
 		top: 50%;
 		left: 50%;
 		transform: translate(-50%, -50%);
-		width: 2px;
+		width: 2.2px;
 		height: 20px;
 		background: #888;
 	}
@@ -158,7 +159,7 @@ p, li {
 .btn-wrapper {
 	display: flex;
 	justify-content: center;
-    padding: 20px 0;
+	padding: 20px 0;
 }
 
 .btn {
@@ -184,10 +185,10 @@ p, li {
 	width: 100%;
 	max-width: 1280px;
 	margin: auto;
-    min-height: 100vh;
-    @include mobile {
-        flex-direction: column;
-    }
+	min-height: 100vh;
+	@include mobile {
+		flex-direction: column;
+	}
 }
 
 .intro {
@@ -198,41 +199,41 @@ p, li {
 	flex-direction: column;
 	align-items: center;
 	max-height: 100%;
-    position: relative;
-    @include tablet {
-        padding: 40px 20px;
-    }
-    @include mobile {
-        width: 100%;
-        flex-direction: row;
-        align-items: flex-start;
-    }
-    @include phone {
-        flex-direction: column;
-    }
+	position: relative;
+	@include tablet {
+		padding: 40px 20px;
+	}
+	@include mobile {
+		width: 100%;
+		flex-direction: row;
+		align-items: flex-start;
+	}
+	@include phone {
+		flex-direction: column;
+	}
 	&-img {
 		width: 100%;
 		max-height: 300px;
-        height: 100%;
-        @include tablet {
-            max-height: 240px;
-        }
-        @include mobile {
-            max-width: 240px;
-            margin-right: 20px;
-        }
-        @include phone {
-            margin-right: 0;
-            max-width: 100%;
-            max-height: 100%;
-        }
+		height: 100%;
+		@include tablet {
+			max-height: 240px;
+		}
+		@include mobile {
+			max-width: 240px;
+			margin-right: 20px;
+		}
+		@include phone {
+			margin-right: 0;
+			max-width: 100%;
+			max-height: 100%;
+		}
 	}
 	&-headline {
 		margin: 10px 0;
-        width: 100%;
-        @include phone {
-            text-align: center;
-        }
+		width: 100%;
+		@include phone {
+			text-align: center;
+		}
 	}
 	&-title {
 		position: relative;
@@ -261,13 +262,13 @@ p, li {
 	width: 70%;
 	padding: 30px 30px 50px;
 	background-color: #fff;
-    max-height: 100%;
-    @include tablet {
-        padding: 30px 20px 50px;
-    }
-    @include mobile {
-        width: 100%;
-    }
+	max-height: 100%;
+	@include tablet {
+		padding: 30px 20px 50px;
+	}
+	@include mobile {
+		width: 100%;
+	}
 
 	&-row {
 		margin: 15px 0;
@@ -302,22 +303,22 @@ p, li {
 	&-head {
 		display: flex;
 		flex-direction: row-reverse;
-        justify-content: space-between;
-        @include phone {
-            display: block;
-        }
+		justify-content: space-between;
+		@include phone {
+			display: block;
+		}
 	}
 	&-date {
 		margin-left: 30px;
 		font-size: 18px;
 		letter-spacing: 0.8px;
-        flex-shrink: 0;
-        @include tablet {
-            font-size: 14px;
-        }
-        @include phone {
-            text-align: right;
-            margin: 5px 0;
-        }
+		flex-shrink: 0;
+		@include tablet {
+			font-size: 14px;
+		}
+		@include phone {
+			text-align: right;
+			margin: 5px 0;
+		}
 	}
 }
