--- a/style.css
+++ b/style.css
@@ -22,6 +22,12 @@ body:before {
   z-index: -1;
 }
 
+@media (max-width: 767.98px) {
+  body:before {
+    background-color: transparent;
+  }
+}
+
 ul {
   padding: 0 20px;
   margin: 0;
@@ -138,49 +144,34 @@ li {
   width: 100%;
 }
 
-#js-to-bottom {
-  position: fixed;
-  bottom: 30px;
-  left: 30%;
-  width: 40px;
-  height: 40px;
-  -webkit-transform-origin: 100% 0;
-          transform-origin: 100% 0;
-  border-radius: 50%;
+.arrow-wrp {
+  position: -webkit-sticky;
+  position: sticky;
+  top: 350px;
+  width: 20px;
+  height: 30px;
+  -webkit-transform: translateX(-5px);
+          transform: translateX(-5px);
+  z-index: 999;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
 }
 
 @media (max-width: 767.98px) {
-  #js-to-bottom {
-    left: 50%;
-    -webkit-transform: translateX(-50%);
-            transform: translateX(-50%);
+  .arrow-wrp {
+    display: none;
   }
 }
 
-#js-to-bottom::after {
-  content: "";
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  -webkit-transform: translate(-50%, -50%);
-          transform: translate(-50%, -50%);
-  width: 2.2px;
-  height: 20px;
-  background: #888;
-}
-
-#js-to-bottom:before {
-  content: "";
-  position: absolute;
-  top: 18px;
-  left: 50%;
-  border: solid #888;
-  border-width: 0 2px 2px 0;
-  padding: 5px;
-  -webkit-transform: rotate(45deg) translateX(-50%);
-          transform: rotate(45deg) translateX(-50%);
-  -webkit-transform-origin: 0;
-          transform-origin: 0;
+#js-to-bottom img {
+  width: 10px;
 }
 
 .btn-wrapper {
@@ -235,7 +226,58 @@ li {
     -webkit-box-direction: normal;
         -ms-flex-direction: column;
             flex-direction: column;
+    padding-bottom: 30px;
   }
+}
+
+.wrapper .version {
+  position: absolute;
+  bottom: 30px;
+  z-index: 1;
+  width: 100%;
+  padding: 0 30px;
+  color: #888;
+  font-size: 16px;
+  cursor: pointer;
+}
+
+@media (max-width: 767.98px) {
+  .wrapper .version {
+    text-align: center;
+  }
+}
+
+.wrapper .version b {
+  color: #222;
+}
+
+.wrapper .tooltip {
+  display: none;
+  opacity: 0;
+  visibility: hidden;
+  position: absolute;
+  bottom: 30px;
+  left: 0px;
+  padding: 5px 10px;
+  border: 1px solid #888;
+  border-radius: 8px;
+  background-color: #fff;
+}
+
+.wrapper .tooltip li {
+  list-style-type: none;
+  color: #888;
+  text-align: left;
+}
+
+.wrapper .tooltip li b {
+  color: #222;
+}
+
+.wrapper .tooltip.hover {
+  display: block;
+  opacity: 1;
+  visibility: visible;
 }
 
 .intro {
@@ -286,8 +328,11 @@ li {
 
 .intro-img {
   width: 100%;
-  max-height: 300px;
-  height: 100%;
+  margin-bottom: 20px;
+}
+
+.intro-img img {
+  display: block;
 }
 
 @media (max-width: 991.98px) {
