--- a/style.scss
+++ b/style.scss
@@ -178,9 +178,10 @@ li {
 		padding-bottom: 30px;
 	}
 	.version {
+		display: none;
 		position: absolute;
 		bottom: 30px;
-		z-index: 1;;
+		z-index: 1;
 		width: 100%;
 		padding: 0 30px;
 		color: #888;
