--- a/src/styles/_content.scss
+++ b/src/styles/_content.scss
@@ -40,6 +40,15 @@
 	&-desc {
 		padding: 10px;
 	}
+
+	&-info {
+		margin: 15px 0;
+		p {
+			font-size: 14px;
+			margin: 10px;
+		}
+	}
+
 	&-head {
 		display: flex;
 		flex-direction: row-reverse;
