--- a/src/styles/_intro.scss
+++ b/src/styles/_intro.scss
@@ -1,6 +1,6 @@
 .intro {
 	width: 30%;
-	padding: 50px 30px;
+	padding: 70px 30px 50px;
 	background-color: #e6e6e6;
 	display: flex;
 	flex-direction: column;
